# src/docs/openApi.yaml
@@ -45,16 +45,66 @@ paths:
         500:
           description: Server error.
 
-  /api/users/list:
+  /api/admin/users_list:
     get:
       security:
         - bearerAuth: []
       tags:
-        - Users
+        - Admin
       summary: List all users (administrator rights are required)
       responses:
         200:
           description: Succes.
+        403:
+          description: Insufficient permissions
+        500:
+          description: Server error.
+
+  /api/admin/find_user/{id}:
+    get:
+      security:
+        - bearerAuth: []
+      tags:
+        - Admin
+      summary: Find user by id  (administrator rights are required)
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: User ID
+          schema:
+            type: integer
+            example: 1
+      responses:
+        200:
+          description: Succes.
+        404:
+          description: User not found
+        403:
+          description: Insufficient permissions
+        500:
+          description: Server error.
+
+  /api/admin/block_user/{id}:
+    patch:
+      security:
+        - bearerAuth: []
+      tags:
+        - Admin
+      summary: Block user by id  (administrator rights are required)
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: User ID
+          schema:
+            type: integer
+            example: 1
+      responses:
+        200:
+          description: Succes.
+        404:
+          description: User not found
         403:
           description: Insufficient permissions
         500:
