# src/users/routes.ts
@@ -1,6 +1,0 @@
-import * as express from "express";
-import { findAllUser } from "./controller";
-import { authMiddleware } from "../middlewares/auth.middeleware";
-
-export const users: express.IRouter = express.Router();
-users.get("/list", authMiddleware, findAllUser);
